infrastructure/production/controllers/cilium/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kirintor-gateway
  namespace: kube-system
spec:
  gatewayClassName: cilium
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      certificateRefs:
      - kind: Secret
        name: wildcard.kirintor.benjaminmnoer.dk-tls
    allowedRoutes:
      namespaces:
        from: All
